--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,29 +8,20 @@
 #
 # 环境变量:
 #   HOST_PORT - 主机端口 (默认: 3080)
-#
-# 如需连接外部 ice-backend 网络，请手动修改 networks 配置
 # ============================================================
 
 services:
-  frontend:
+  nginx:
     image: nginx:latest
-    container_name: ice_frontend
-    restart: unless-stopped
     ports:
       - "${HOST_PORT:-3080}:80"
     volumes:
-      - ./dist:/usr/share/nginx/html:ro
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./dist:/var/www/html
+    restart: always
     networks:
-      - ice-network
+      - nginx-network
 
 networks:
-  ice-network:
+  nginx-network:
     driver: bridge
