--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,40 @@
-events {}
+events {
+    worker_connections 1024;
+}
 
 http {
     include       mime.types;
     default_type  application/octet-stream;
+
+    # 性能优化
+    sendfile on;
+    tcp_nopush on;
+    keepalive_timeout 65;
+
+    # Gzip 压缩
+    gzip on;
+    gzip_min_length 1024;
+    gzip_types text/plain text/css text/javascript 
+               application/json application/javascript image/svg+xml;
 
     server {
         listen 80;
         server_name _;
 
         root /var/www/html;
+
+        # 静态资源缓存 (7天)
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            expires 7d;
+            add_header Cache-Control "public";
+            access_log off;
+        }
+
+        # HTML 不缓存，确保更新及时生效
+        location ~* \.html$ {
+            expires -1;
+            add_header Cache-Control "no-cache";
+        }
 
         # Vue Router 历史模式支持
         location / {
